# fqlink

./: Cargo.toml  README.md
.github/action/: build.yaml
.github/workflows/: build.yaml  release.yaml
src/: main.rs
src/types/: mod.rs
