[package]
name = "fqdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.68"
clap = { version = "4.2.5", features = ["derive"] }
futures-util = "0.3.28"
itertools = "0.10.5"
regex = "1.8.1"
reqwest = { version = "0.11.16", features = ["serde_json", "json"] }
roxmltree = "0.18.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
